--- a/lab2/MDK-ARM/lab2/lab2.build_log.htm
+++ b/lab2/MDK-ARM/lab2/lab2.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  02/09/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'lab2'
+compiling stm32f0xx_it.c...
 compiling main.c...
 linking...
-Program Size: Code=3542 RO-data=274 RW-data=12 ZI-data=1644  
+Program Size: Code=3622 RO-data=274 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
 "lab2\lab2.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
